# neurocode

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  WARP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  vscode-sample.yml
.neurocode/: ir.toon
docs/: agents.md  architecture.md  demo.md  ir.md  patch-plan.md  release_notes_template.md  status.md  troubleshooting.md  vscode.md
examples/: neurocode_agent.py
examples/vscode-neurocode/: README.md  extension.js  package.json
src/neurocode/: __init__.py  agent_tools.py  api.py  check.py  cli.py  config.py  embedding_model.py  embedding_provider.py  embedding_text.py  explain.py  explain_llm.py  history_model.py  ir_build.py  ir_model.py  llm_client.py  patch.py  patch_plan.py  patch_plan_schema.py  plan_patch_llm.py  pyproject.py  query.py  search.py  server.py  status.py  symbol_explainer.py  toon_parse.py  toon_serialize.py
src/neurocode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_check_expanded.py  test_cli_commands.py  test_cli_embed.py  test_cli_flow.py  test_cli_patch.py  test_cli_status.py  test_embedding_provider.py  test_embedding_store.py  test_embedding_text.py  test_explain_llm.py  test_ir_and_check.py  test_ir_call_graph.py  test_llm_client.py  test_patch_history.py  test_patch_plan_schema.py  test_patch_strategies.py  test_plan_patch_llm.py  test_query.py  test_search.py  test_server.py  test_toon_roundtrip.py
tests/data/sample_repo/: pyproject.toml
tests/data/sample_repo/package/: classy.py  mod_a.py  mod_b.py
tests/data/sample_repo/tests/: test_mod_a.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
