[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurocode"
version = "0.1.0"
description = "Neural IR engine for deep, structural understanding and modification of codebases."
authors = [{ name = "NeuroCode Team" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.0.0"]
[project.scripts]
neurocode = "neurocode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
