[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurocode-ai"
description = "Neural IR engine for deep, structural understanding and modification of codebases."
authors = [{ name = "NeuroCode Team" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
  "openai>=1.0.0",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Testing",
]
urls = { "Homepage" = "https://github.com/gabrielekarra/neurocode" }
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff==0.6.4", "pytest==8.3.2"]
[project.scripts]
neurocode = "neurocode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "neurocode.__version__" }

[tool.ruff]
target-version = "py310"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
